2007-11-05  Sebastien Pouliot  <sebastien@ximian.com>

	* gdipFunctions.cs: Add a bool parameter to GdiPlusStreamHelper ctor
	to move, or not, the stream position to load/save images.
	* Image.cs: Stream position is moved to 0 when loading images from 
	stream but isn't moved for saving an image to a stream. Fix part of
	#338779 (except that Image.FromFile behave differently for metafiles)

2007-11-05  Sebastien Pouliot  <sebastien@ximian.com> 

	* gdipFunctions.cs: Stream position shouldn't be changed when 
	loading images (bug #338779).
	* Pen.cs: Add a [MonoLimitation] to Pen's Alignment property so that
	the next version of MoMA will report it as not-implemented in 
	libgdiplus (but it works under Windows, i.e. MS GDI+). #338985

2007-11-01  Geoff Norton  <gnorton@novell.com>

	* carbonFunctions.cs:  Initiali implementation of clipping Z-order masking
	siblings from the context

2007-10-31  Sebastien Pouliot  <sebastien@ximian.com>

	* ImageAnimator.cs: Fix delay == 0 to match most browser (imaginative)
	definitions of "0". Don't throw on null images. Synchronize hashtable.
	Remove unrequired loops.

2007-10-17  Geoff Norton  <gnorton@novell.com>

	* Graphics.cs: Only synchronize the display on Flush when we actually have
	a CGContext

2007-10-17  Geoff Norton  <gnorton@novell.com>

	* carbonFunctions.cs: Initial support for clipping children out of the
	CGContext before drawing on it.

2007-10-09  Geoff Norton  <gnorton@novell.com>

	* carbonFunctions.cs: Correct the P/Invoke definition for CGContext*CTM.

2007-09-26  Ivan N.Zlatev <contact@i-nz.net>

	* ColorConverter.cs: During conversion to InstanceDescriptor check
	both IsSystemColor to get a PropertyInfo from type SystemColors 
	and IsKnownColor to get PropertyInfo from type Color.

2007-08-09  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* ColorTranslator.cs: optimized Html color formatting in ToHtml method

2007-08-13  Sebastien Pouliot  <sebastien@ximian.com>
